# Radar-ElectroOptical-Simulation

./: GMS_SLICOT.f90  GMS_cubint_quad.hpp  GMS_cuda_utils.cuh  GMS_hydrometeor_ensemble_scattering_AVX512.cpp  GMS_perf_test_ComputeGrassParamEq_zmm16r4_call_scope_non_looped.cpp  GMS_win_process_heap.h  GMS_win_process_memory.cpp  GMS_win_utils.h  LICENSE  README.md  bispecf.f  dcfod.f90  sm2x2avg_t3_1_1_0.c  sm2x2avg_t3_1_1_1.c
Antenna/: GMS_antenna_common_adt.h  GMS_antenna_common_adt_avx 512.h  GMS_antenna_common_adt_avx.h  GMS_antenna_common_adt_sse.h  GMS_antenna_common_zmm16r4.hpp  GMS_antenna_em_types_v1.hpp  GMS_antenna_model_adt.f90  GMS_antenna_model_adt.h  GMS_antenna_model_common.h  GMS_antenna_types.hpp  GMS_antenna_types.hpp.txt  GMS_antenna_types_v2.h  GMS_dipole_ant_types.h  GMS_dipole_ant_types_avx.h  GMS_dipole_ant_types_sse.h  GMS_stat_antenna_theory_zmm16r4.cpp  GMS_stat_antenna_theory_zmm16r4.h  GMS_stat_antenna_theory_zmm8r8.cpp  GMS_stat_antenna_theory_zmm8r8.h
Atmosphere/: AtmosphereLibDefs.h  AtmosphereModel76.h  CESM_Kernel_License_091118.docx  GMS_AtmMetricViscosity.h  GMS_AtmMetricViscosity.inl  GMS_AtmosphereDefs.h  GMS_AtmosphereModel76.h  GMS_AtmosphereModel76.inl  GMS_NRLMSISE00_CCOR.h  GMS_NRLMSISE00_CCOR.inl  GMS_NRLMSISE00_INOUT.h  GMS_NRLMSISE00_SHARED.h  GMS_drag_coeff.cpp  GMS_hwm14.f90  GMS_micro_mg2_0.F90  GMS_wind_wrf.f90  GMS_wsm6_driver.f90  GMS_wsm6_kernel.F90  hwm14.f90  micro_mg2_0.F90  micro_mg_cam.F90  micro_mg_utils.F90  shr_kind_mod.F90  wv_sat_methods.F90
BLAS-kernels/: GMS_axpy_avx2_unroll10x.h  GMS_axpy_avx2_unroll10x.hpp  GMS_axpy_avx512_unroll10x.hpp  GMS_caxpy.h  GMS_cdot.cpp  GMS_cdot.h  GMS_cgemv_t.hpp  GMS_copy_avx512_unroll16x.cpp  GMS_copy_avx512_unroll16x.h  GMS_copy_avx512_unroll16x.hpp  GMS_copy_avx_unroll16x.h  GMS_copy_avx_unroll16x.hpp  GMS_dasum.cpp  GMS_dasum.h  GMS_dgemm_beta_skx.h  GMS_dotv_avx512_unroll10x.cpp  GMS_dotv_avx512_unroll10x.hpp  GMS_dotv_avx_unroll10x.cpp  GMS_dotv_avx_unroll10x.hpp  GMS_scalv_avx512_unroll8x.h  GMS_scalv_avx512_unroll8x.hpp  GMS_scalv_avx_unroll8x.hpp  GMS_setv_avx512_unroll16x.cpp  GMS_setv_avx512_unroll16x.hpp  GMS_setv_avx_unroll16x.hpp  GMS_ssymv_u.cpp  GMS_ssymv_u.h  GMS_swap_avx_unroll16x.hpp  GMS_swap_avx_unroll8x.hpp  GMS_zscal.hpp
Common/: GMS_cache_aligned_allocator.h  GMS_common.cpp  GMS_common.h  GMS_config.h  GMS_convert_numeric_data_types.hpp  GMS_debug.cpp  GMS_debug.h  GMS_error_macros.h  GMS_fpexceptions.cpp  GMS_fpexceptions.h  GMS_helpers.h  GMS_hw_metrics_time_series_analysis.h  GMS_indices.h  GMS_malloc.cpp  GMS_malloc.h  GMS_memops.h  GMS_simd_memops.h  GMS_version.h  gnuplot_example.c  gnuplot_i.c  mach_routines.f90
Core/: GMS_antenna_em_types_v1.hpp  GMS_antenna_em_types_v2.h  GMS_cpuid_x86.c  GMS_data_comparator.hpp  GMS_dyn_array.h  GMS_error_macros.h  GMS_fpexceptions.h  GMS_hw_perf_macros.h  GMS_malloc.h  GMS_stat_containers_xmm2r8.h  gnuplot_i.h
FDM/: GMS_dcm_avx.hpp  GMS_dcm_avx512.hpp  GMS_dcm_sse.hpp  GMS_deriv_aerodyn_angles_r4.hpp  GMS_deriv_aerodyn_angles_r8.hpp  GMS_deriv_euler_angles_r4.hpp  GMS_deriv_euler_angles_r8.hpp  GMS_earth_motion_r4.hpp  GMS_earth_motion_r8.hpp  GMS_euler_matrix_r4.hpp  GMS_euler_matrix_r8.hpp  GMS_frame_rav_r4.hpp  GMS_frame_rav_r8.hpp  GMS_inert_ref_frame_sse.hpp  GMS_inert_ref_frame_xmm2r8.hpp  GMS_inert_ref_frame_xmm4r4.hpp  GMS_reference_frame_double.h  GMS_reference_frame_double.hpp  GMS_reference_frame_float.h  (+13 more)
src/gpu/cuda-integration/demos/: CMakeLists.txt  Fenc_eval_cost.cu  Genz1_8D.cu  Genz3_8D.cu  Genz4_8D.cu  Genz5_8D.cu  Genz6_2D.cu  Genz6_6D.cu  SinSum6D.cu  seqGenz3_3D.cpp
(+1984 files in other folders)
